After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750716 - JNI: jaw_object_set_role is missing
JNI: jaw_object_set_role is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-10 15:16 UTC by Magdalen Berns (irc magpie)
Modified: 2015-06-21 18:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (1.71 KB, patch)
2015-06-10 15:19 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Patch to address problem (1.66 KB, patch)
2015-06-21 18:51 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-06-10 15:16:47 UTC
jaw_object_set_role is missing from JawObject https://developer.gnome.org/atk/unstable/AtkObject.html#atk-object-set-role
Comment 1 Magdalen Berns (irc magpie) 2015-06-10 15:19:49 UTC
Created attachment 304979 [details] [review]
Patch to address problem
Comment 2 Magdalen Berns (irc magpie) 2015-06-21 18:51:06 UTC
Created attachment 305779 [details] [review]
Patch to address problem