JNI: create jaw_object_set_role

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=750716